// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InstallButton > should render InstallButton with INSTALL mode 1`] = `
<DocumentFragment>
  <button
    class="_root_cc4fb1 _desktop_cc4fb1 _install_cc4fb1 "
    data-testid="install-button"
    type="button"
  >
    install
  </button>
</DocumentFragment>
`;

exports[`InstallButton > should render InstallButton with INSTALLED mode 1`] = `
<DocumentFragment>
  <button
    class="_root_cc4fb1 _desktop_cc4fb1 _installed_cc4fb1 "
    data-testid="install-button"
    type="button"
  >
    installed
  </button>
</DocumentFragment>
`;

exports[`InstallButton > should render InstallButton with UNINSTALL mode 1`] = `
<DocumentFragment>
  <button
    class="_root_cc4fb1 _desktop_cc4fb1 _uninstall_cc4fb1 "
    data-testid="install-button"
    type="button"
  >
    uninstall
  </button>
</DocumentFragment>
`;

exports[`InstallButton > should render InstallButton with skeleton 1`] = `
<DocumentFragment>
  <div
    class="_root_cc4fb1 _skeleton-desktop_cc4fb1"
  />
</DocumentFragment>
`;
